--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,18 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
+
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,8 +22,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
