--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,24 @@ dependencies {
 
     // 兼容库
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.material:material:1.0.0'
 
-    // 功能型
+    // 网络请求
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // 第三方（纯功能）
     implementation 'com.jakewharton:butterknife:10.2.0'
     kapt 'com.jakewharton:butterknife-compiler:10.2.0'
     implementation 'com.blankj:utilcodex:1.26.0'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 
-    // ui相关
+    // 第三方（纯UI）
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
 }
