--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
@@ -37,6 +41,7 @@ dependencies {
     // 兼容库
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
 
     // 网络请求
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
