--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     // 第三方（纯UI）
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
     implementation 'com.youth.banner:banner:1.4.10'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
