--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // 网络请求
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
